# chain-of-custody-zome

./: 404.html  Cargo.toml  README.md  chain-of-custody-store.html  flake.nix  hashmap.json  index.html  introduction.html  package.json  pnpm-lock.yaml  setup.html
assets/: app.8_bz19MJ.js  app.BbZ-m-v3.js  app.BiXYaYha.js  app.CDz6H6r6.js  app.CgGTxt9w.js  app.DU7KFuur.js  chain-of-custody-store.md.BMMudigz.js  chain-of-custody-store.md.BMMudigz.lean.js  elements_custody-transfer-detail.md.BaINNJnZ.js  elements_custody-transfer-detail.md.BaINNJnZ.lean.js  elements_custody-transfer-detail.md.CGqhmGj5.js  elements_custody-transfer-detail.md.CGqhmGj5.lean.js  elements_custody-transfer-detail.md.Cel60QoP.js  elements_custody-transfer-detail.md.Cel60QoP.lean.js  elements_custody-transfer-detail.md.Cym5MCFf.js  elements_custody-transfer-detail.md.Cym5MCFf.lean.js  elements_custody-transfer-detail.md.DHhc7P1g.js  elements_custody-transfer-detail.md.DHhc7P1g.lean.js  elements_custody-transfer-detail.md.DgtTnqk2.js  elements_custody-transfer-detail.md.DgtTnqk2.lean.js  elements_custody-transfer-detail.md.DwxXP25j.js  elements_custody-transfer-detail.md.DwxXP25j.lean.js  elements_custody-transfer-detail.md.q4zjoB_J.js  elements_custody-transfer-detail.md.q4zjoB_J.lean.js  elements_custody-transfer-summary.md.C-Y85pod.js  (+73 more)
backend/: .rustc_info.json
zomes/coordinator/chain_of_custody/: Cargo.toml  zome.nix
zomes/coordinator/chain_of_custody/src/: custody_transfer.rs  lib.rs
zomes/coordinator/chain_of_custody/src/countersigning/: checks.rs  common.rs  initiator.rs  responder.rs
(+612 files in other folders)
