[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6.0"
hdk = { version = "0.5.0", features = ["unstable-countersigning"] }
holochain_serialized_bytes = "*"
serde = "1"

